kube/service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: repo-security-scanner-service
  name: repo-security-scanner-service
spec:
  selector:
    name: repo-security-scanner
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  # https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-probes/
  livenessProbe:
    httpGet:
    path: /healthz
    port: http
  readinessProbe:
    httpGet:
    path: /healthz
    port: http
